// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Box Snapshots should applies border-color classes 1`] = `
<div>
  <div
    class="box box--radius-none box--border-color-secondary"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should applies border-style classes 1`] = `
<div>
  <div
    class="box box--radius-none box--border-style-dashed"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should applies border-width classes 1`] = `
<div>
  <div
    class="box box--radius-none box--border-width-2"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should applies full-screen classes 1`] = `
<div>
  <div
    class="box box--radius-none box--full-screen"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should applies full-width classes 1`] = `
<div>
  <div
    class="box box--radius-none box--full-width"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should applies radius classes 1`] = `
<div>
  <div
    class="box box--radius-2xl"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should apply 'default' skin classes 1`] = `
<div>
  <div
    class="box box--default box--radius-none"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should apply 'neutral-faded' skin classes 1`] = `
<div>
  <div
    class="box box--neutral-faded box--radius-none"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should apply 'primary-faded' skin classes 1`] = `
<div>
  <div
    class="box box--primary-faded box--radius-none"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should apply 'secondary-faded' skin classes 1`] = `
<div>
  <div
    class="box box--secondary-faded box--radius-none"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should apply 'white' skin classes 1`] = `
<div>
  <div
    class="box box--white box--radius-none"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should render additional classes 1`] = `
<div>
  <div
    class="box box--radius-none other-class"
  >
    Box
  </div>
</div>
`;

exports[`Box Snapshots should renders component as main 1`] = `
<div>
  <main
    class="box box--radius-none"
  >
    Box
  </main>
</div>
`;

exports[`Box Snapshots should renders default component 1`] = `
<div>
  <div
    class="box box--radius-none"
  >
    Box
  </div>
</div>
`;
